--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -8,6 +8,7 @@ resolver = "2"
 [dependencies]
 oort_proto = { path = "../shared/proto" }
 oort_simulator = { path = "../shared/simulator" }
+oort_compiler = { path = "../shared/compiler" }
 firestore = "0.6.1"
 gcloud-sdk = "0.18.1"
 serde = { version = "1.0", features = ["derive"] }
@@ -34,6 +35,7 @@ once_cell = "1.17.0"
 regex = "1.7.1"
 rand = "0.8.5"
 metaheuristics-nature = { version = "8.0.4", features = ["clap", "rayon"] }
+tempdir = "0.3.7"
 
 [patch.crates-io]
 rand_seeder = { git = "https://github.com/rlane/seeder", rev = "c39e58447f7c236fb98579a5d46e5668b92a3245" }
