--- a/shared/compiler/Cargo.toml
+++ b/shared/compiler/Cargo.toml
@@ -6,13 +6,11 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.69"
-tokio = { version = "1", features = ["macros", "process"] }
 tempdir = "0.3.7"
 glob = "0.3.1"
 
 [dev-dependencies]
-tokio = { version = "1", features = ["macros", "process", "rt-multi-thread"] }
-criterion = { version = "0.4.0", features = ["html_reports", "async_tokio"] }
+criterion = { version = "0.4.0", features = ["html_reports"] }
 
 [[bench]]
 name = "compiler"
