--- a/services/shortcode/Cargo.toml
+++ b/services/shortcode/Cargo.toml
@@ -16,3 +16,6 @@ stackdriver_logger = "0.8.0"
 firestore = "0.6.1"
 gcloud-sdk = "0.18.1"
 regex = "1.7.1"
+rand = "0.8.5"
+serde_json = "1.0.93"
+chrono = "0.4.23"
